Prevent content from overlapping search popup

--- a/Resources/Private/Scss/Sections/_content.scss
+++ b/Resources/Private/Scss/Sections/_content.scss
@@ -2,6 +2,7 @@
 	@include column(small);
 	padding: 0;
 	position: relative;
+	z-index: 0;
 
 	address,
 	blockquote,
